--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -14,7 +14,7 @@
         and it will add a small amount of padding, a border, and will
         center all of its child elements content and text. --}}
         <div class="resource flex-group-center">
-          <label for="system.ponto.vida.value" class="resource-label">Ponto(s) de Vida</label>
+          <label for="system.ponto.vida.value" class="resource-label">{{localize 'TRESDETALPHA.pontos.vida.label'}}</label>
           <div class="resource-content flexrow flex-center flex-between">
             <input type="text" name="system.ponto.vida.value" value="{{system.ponto.vida.value}}" data-dtype="Number" />
             <span> / </span>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="resource flex-group-center">
-          <label for="system.ponto.mana.value" class="resource-label">Ponto(s) de Mana</label>
+          <label for="system.ponto.mana.value" class="resource-label">{{localize 'TRESDETALPHA.pontos.mana.label'}}</label>
           <div class="resource-content flexrow flex-center flex-between">
             <input type="text" name="system.ponto.mana.value" value="{{system.ponto.mana.value}}" data-dtype="Number" />
             <span> / </span>
