--- a/templates/actor/actor-personagem-sheet.html
+++ b/templates/actor/actor-personagem-sheet.html
@@ -14,7 +14,7 @@
         and it will add a small amount of padding, a border, and will
         center all of its child elements content and text. --}}
         <div class="resource flex-group-center">
-          <label for="system.ponto.vida.value" class="resource-label">Ponto(s) de Vida</label>
+          <label for="system.ponto.vida.value" class="resource-label">{{localize 'TRESDETALPHA.pontos.vida.label'}}</label>
           <div class="resource-content flexrow flex-center flex-between">
             <input type="text" name="system.ponto.vida.value" value="{{system.ponto.vida.value}}" data-dtype="Number" />
             <span> / </span>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="resource flex-group-center">
-          <label for="system.ponto.mana.value" class="resource-label">Ponto(s) de Mana</label>
+          <label for="system.ponto.mana.value" class="resource-label">{{localize 'TRESDETALPHA.pontos.mana.label'}}</label>
           <div class="resource-content flexrow flex-center flex-between">
             <input type="text" name="system.ponto.mana.value" value="{{system.ponto.mana.value}}" data-dtype="Number" />
             <span> / </span>
@@ -64,13 +64,13 @@
           {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
           use both the "grid" and "grid-Ncol" class where "N" can be any number
           from 1 to 12 and will create that number of columns. --}}
-          <div class="abilities flexcol">
-            {{#each system.abilities as |ability key|}}
+          <div class="caracteristicas flexcol">
+            {{#each system.caracteristicas as |ability key|}}
             <div class="ability flexrow flex-group-center">
-              <label for="system.abilities.{{key}}.value" class="resource-label rollable flexlarge align-left"
-                data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{ability.label}}</label>
-              <input type="text" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number" />
-              <span class="ability-mod rollable" data-roll="d20+@abilities.{{key}}.mod"
+              <label for="system.caracteristicas.{{key}}.value" class="resource-label rollable flexlarge align-left"
+                data-roll="d20+@caracteristicas.{{key}}.mod" data-label="{{ability.label}}">{{ability.label}}</label>
+              <input type="text" name="system.caracteristicas.{{key}}.value" value="{{ability.value}}" data-dtype="Number" />
+              <span class="ability-mod rollable" data-roll="d20+@caracteristicas.{{key}}.mod"
                 data-label="{{ability.label}}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
             </div>
             {{/each}}
