--- a/templates/actor/parts/actor-effects.html
+++ b/templates/actor/parts/actor-effects.html
@@ -5,8 +5,8 @@
       <div class="effect-source">Source</div>
       <div class="effect-source">Duration</div>
       <div class="item-controls effect-controls flexrow">
-        <a class="effect-control" data-action="create" title="{{localize 'TRESDETALPHA.EffectCreate'}}">
-          <i class="fas fa-plus"></i> {{localize "TRESDETALPHA.Add"}}
+        <a class="effect-control" data-action="create" title="{{localize 'BOILERPLATE.EffectCreate'}}">
+          <i class="fas fa-plus"></i> {{localize "BOILERPLATE.Add"}}
         </a>
       </div>
     </li>
@@ -21,13 +21,13 @@
         <div class="effect-source">{{effect.sourceName}}</div>
         <div class="effect-duration">{{effect.duration.label}}</div>
         <div class="item-controls effect-controls flexrow">
-          <a class="effect-control" data-action="toggle" title="{{localize 'TRESDETALPHA.EffectToggle'}}">
+          <a class="effect-control" data-action="toggle" title="{{localize 'BOILERPLATE.EffectToggle'}}">
             <i class="fas {{#if effect.disabled}}fa-check{{else}}fa-times{{/if}}"></i>
           </a>
-          <a class="effect-control" data-action="edit" title="{{localize 'TRESDETALPHA.EffectEdit'}}">
+          <a class="effect-control" data-action="edit" title="{{localize 'BOILERPLATE.EffectEdit'}}">
             <i class="fas fa-edit"></i>
           </a>
-          <a class="effect-control" data-action="delete" title="{{localize 'TRESDETALPHA.EffectDelete'}}">
+          <a class="effect-control" data-action="delete" title="{{localize 'BOILERPLATE.EffectDelete'}}">
             <i class="fas fa-trash"></i>
           </a>
         </div>
