Alteração de nome mana para magia. Alteração na ficha de personagem, colocando os campos com os devidos nomes.

--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -23,11 +23,11 @@
         </div>
 
         <div class="resource flex-group-center">
-          <label for="system.mana.value" class="resource-label">Power</label>
+          <label for="system.magia.value" class="resource-label">Power</label>
           <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.mana.value" value="{{system.mana.value}}" data-dtype="Number"/>
+            <input type="text" name="system.magia.value" value="{{system.magia.value}}" data-dtype="Number"/>
             <span> / </span>
-            <input type="text" name="system.mana.max" value="{{system.mana.max}}" data-dtype="Number"/>
+            <input type="text" name="system.magia.max" value="{{system.magia.max}}" data-dtype="Number"/>
           </div>
         </div>
 
