--- a/templates/actor/actor-personagem-sheet.html
+++ b/templates/actor/actor-personagem-sheet.html
@@ -2,39 +2,39 @@
 
   {{!-- Sheet Header --}}
   <header class="sheet-header">
-    <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
+    <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100" />
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></h1>
+      <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name" /></h1>
       {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
       use both the "grid" and "grid-Ncol" class where "N" can be any number
-      from 1 to 12 and will create that number of columns.  --}}
+      from 1 to 12 and will create that number of columns. --}}
       <div class="resources grid grid-3col">
 
         {{!-- "flex-group-center" is also defined in the _grid.scss file
         and it will add a small amount of padding, a border, and will
         center all of its child elements content and text. --}}
         <div class="resource flex-group-center">
-          <label for="system.vida.value" class="resource-label">Health</label>
+          <label for="system.vida.value" class="resource-label">{{localize "TRESDETALPHA.Pontos.vida.label"}}</label>
           <div class="resource-content flexrow flex-center flex-between">
-          <input type="text" name="system.vida.value" value="{{system.vida.value}}" data-dtype="Number"/>
-          <span> / </span>
-          <input type="text" name="system.vida.max" value="{{system.vida.max}}" data-dtype="Number"/>
+            <input type="text" name="system.vida.value" value="{{system.vida.value}}" data-dtype="Number" />
+            <span> / </span>
+            <input type="text" name="system.vida.max" value="{{system.vida.max}}" data-dtype="Number" />
           </div>
         </div>
 
         <div class="resource flex-group-center">
-          <label for="system.mana.value" class="resource-label">Power</label>
+          <label for="system.magia.value" class="resource-label">{{localize "TRESDETALPHA.Pontos.magia.label"}}</label>
           <div class="resource-content flexrow flex-center flex-between">
-          <input type="text" name="system.mana.value" value="{{system.mana.value}}" data-dtype="Number"/>
-          <span> / </span>
-          <input type="text" name="system.mana.max" value="{{system.mana.max}}" data-dtype="Number"/>
+            <input type="text" name="system.magia.value" value="{{system.magia.value}}" data-dtype="Number" />
+            <span> / </span>
+            <input type="text" name="system.magia.max" value="{{system.magia.max}}" data-dtype="Number" />
           </div>
         </div>
 
         <div class="resource flex-group-center">
-          <label for="system.attributes.level.value" class="resource-label">Level</label>
+          <label for="system.attributes.level.value" class="resource-label">{{localize "TRESDETALPHA.Pontos.experiencia.label"}}</label>
           <div class="resource-content flexrow flex-center flex-between">
-          <input type="text" name="system.attributes.level.value" value="{{system.attributes.level.value}}" data-dtype="Number"/>
+            <input type="text" name="system.experiencia.value" value="{{system.experiencia.value}}" data-dtype="Number" />
           </div>
         </div>
 
@@ -62,13 +62,15 @@
 
           {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
           use both the "grid" and "grid-Ncol" class where "N" can be any number
-          from 1 to 12 and will create that number of columns.  --}}
+          from 1 to 12 and will create that number of columns. --}}
           <div class="abilities flexcol">
             {{#each system.abilities as |ability key|}}
             <div class="ability flexrow flex-group-center">
-              <label for="system.abilities.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{ability.label}}</label>
-              <input type="text" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number"/>
-              <span class="ability-mod rollable" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
+              <label for="system.abilities.{{key}}.value" class="resource-label rollable flexlarge align-left"
+                data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{ability.label}}</label>
+              <input type="text" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number" />
+              <span class="ability-mod rollable" data-roll="d20+@abilities.{{key}}.mod"
+                data-label="{{ability.label}}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
             </div>
             {{/each}}
           </div>
@@ -76,7 +78,8 @@
 
         {{!-- For the main features list, span the right two columns --}}
         <section class="main grid-span-2">
-          {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in module/helpers/templates.mjs --}}
+          {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in
+          module/helpers/templates.mjs --}}
           {{> "systems/tresdetalpha/templates/actor/parts/actor-features.html"}}
         </section>
 
@@ -85,13 +88,14 @@
 
     {{!-- Biography Tab --}}
     <div class="tab biography" data-group="primary" data-tab="description">
-      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
+      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to
+      the rollData property. --}}
       {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
     </div>
 
     {{!-- Owned Items Tab --}}
     <div class="tab items" data-group="primary" data-tab="items">
-       {{> "systems/tresdetalpha/templates/actor/parts/actor-items.html"}}
+      {{> "systems/tresdetalpha/templates/actor/parts/actor-items.html"}}
     </div>
 
     {{!-- Owned Spells Tab --}}
@@ -106,4 +110,3 @@
 
   </section>
 </form>
-
