--- a/templates/actor/actor-personagem-sheet.html
+++ b/templates/actor/actor-personagem-sheet.html
@@ -45,11 +45,11 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     {{!-- Default tab is specified in actor-sheet.mjs --}}
-    <a class="item" data-tab="features">Features</a>
-    <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="items">Items</a>
-    <a class="item" data-tab="spells">Spells</a>
-    <a class="item" data-tab="effects">Effects</a>
+    <a class="item" data-tab="features">{{localize "TRESDETALPHA.Aba.caracteristica"}}</a>
+    <a class="item" data-tab="description">{{localize "TRESDETALPHA.Aba.descricao"}}</a>
+    <a class="item" data-tab="items">{{localize "TRESDETALPHA.Aba.item"}}</a>
+    <a class="item" data-tab="spells">{{localize "TRESDETALPHA.Aba.magia"}}</a>
+    <a class="item" data-tab="effects">{{localize "TRESDETALPHA.Aba.efeito"}}</a>
   </nav>
 
   {{!-- Sheet Body --}}
