Adição de lista de Vantagens para a ficha de Personagem.

--- a/templates/actor/actor-personagem-sheet.html
+++ b/templates/actor/actor-personagem-sheet.html
@@ -79,6 +79,7 @@
           {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in
           module/helpers/templates.mjs --}}
           {{> "systems/tresdetalpha/templates/actor/parts/actor-features.html"}}
+          {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagens.html"}}
         </section>
 
       </section>
