--- a/templates/actor/parts/actor-vantagens.html
+++ b/templates/actor/parts/actor-vantagens.html
@@ -1,11 +1,11 @@
 <ol class="items-list">
   <li class="item flexrow items-header">
-    <div class="item-name">Exemplo Feature</div>
+    <div class="item-name">{{localize "TYPES.Item.vantagens"}}</div>
     <div class="item-controls">
-      <a class="item-control item-create" title="Create item" data-type="feature"><i class="fas fa-plus"></i> {{localize "TRESDETALPHA.Add"}}</a>
+      <a class="item-control item-create" title="Create item" data-type="vantagem"><i class="fas fa-plus"></i> {{localize "TRESDETALPHA.Add"}}</a>
     </div>
   </li>
-  {{#each features as |item id|}}
+  {{#each vantagems as |item id|}}
     <li class="item flexrow" data-item-id="{{item._id}}">
       <div class="item-name">
         <div class="item-image">
