Adicionado lista de Desvantagens e Vantagem única nas fichas de personagens

--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -72,6 +72,9 @@
           module/helpers/templates.mjs --}}
           {{> "systems/tresdetalpha/templates/actor/parts/actor-features.html"}}
           {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagens.html"}}
+          {{> "systems/tresdetalpha/templates/actor/parts/actor-desvantagens.html"}}
+          {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagemunica.html"}}
+        </section>
         </section>
 
       </section>
