Criação de ficha de cadastro de Objeto Mágico. Remoção de fichas de cadastro que não serão utilizados.

--- a/styles/tresdetalpha.css
+++ b/styles/tresdetalpha.css
@@ -443,6 +443,11 @@
   line-height: 26px;
   margin: 0;
 }
+.tresdetalpha.sheet.item .sheet-header .item-subtitle .item-type-om {
+  font-size: 22px;
+  line-height: 22px;
+  margin: 0;
+}
 .tresdetalpha.sheet.item .sheet-header .item-subtitle .item-status {
   font-size: 16px;
   line-height: 24px;
