--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -108,17 +108,20 @@
           </div>
         </div>
         
-
-        {{!-- For the main features list, span the right two columns --}}
         <section class="main grid-span-2">
           {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in
           module/helpers/templates.mjs --}}
-          {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagens.html"}}
-          {{> "systems/tresdetalpha/templates/actor/parts/actor-desvantagens.html"}}
-          {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagemunica.html"}}
-          {{> "systems/tresdetalpha/templates/actor/parts/actor-pericias.html"}}
+          <div class="resources grid grid-2col">
+            <div class="resource flex-group-center">
+              {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagemunica.html"}}
+              {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagens.html"}}
+            </div>
+            <div class="resource flex-group-center">
+              {{> "systems/tresdetalpha/templates/actor/parts/actor-desvantagens.html"}}
+              {{> "systems/tresdetalpha/templates/actor/parts/actor-pericias.html"}}
+            </div>
+          </div>
         </section>
-      </section>
 
   </section>
   </div>
