--- a/templates/actor/parts/actor-vantagens.html
+++ b/templates/actor/parts/actor-vantagens.html
@@ -14,8 +14,8 @@
         <h4>{{item.name}}</h4>
       </div>
       <div class="item-controls">
-        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        <a class="item-control item-edit" title="{{localize "TRESDETALPHA.Editar"}}"><i class="fas fa-edit"></i></a>
+        <a class="item-control item-delete" title="{{localize "TRESDETALPHA.Deletar"}}"><i class="fas fa-trash"></i></a>
       </div>
     </li>
   {{/each}}
