--- a/templates/item/item-objetoMagico-sheet.html
+++ b/templates/item/item-objetoMagico-sheet.html
@@ -5,11 +5,15 @@
       <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder={{localize "TRESDETALPHA.Nome"}}/></h1>
       <div class="grid grid-3col">
         <div class="resource flex-group-center">
-          <label class="resource-label">{{localize "TRESDETALPHA.Custo"}}</label>
+          <label class="resource-label">{{localize "TRESDETALPHA.Custoempe"}}</label>
           <input type="text" name="system.custo" value="{{system.custo}}" data-dtype="Number"/>
         </div>
+        <div class="resource flex-group-center">
+          <label class="resource-label">{{localize "TRESDETALPHA.tipo"}}</label>
+          <input type="text" name="system.tipo" value="{{system.tipo}}" data-dtype="String"/>
+        </div>
         <div class="item-subtitle" style="text-align: center;">
-          <h4 class="item-type">{{localize "TYPES.Item.vantagem"}}</h4>
+          <h4 class="item-type-om">{{localize "TYPES.Item.objetoMagico"}}</h4>
         </div>
       </div>
     </div>
