--- a/templates/item/item-pericia-sheet.html
+++ b/templates/item/item-pericia-sheet.html
@@ -9,7 +9,7 @@
           <input type="text" name="system.custo" value="{{system.custo}}" data-dtype="Number" disabled="disabled"/>
         </div>
         <div class="item-subtitle" style="text-align: center;">
-          <h4 class="item-type">{{localize "TYPES.Item.vantagem"}}</h4>
+          <h4 class="item-type">{{localize "TYPES.Item.pericia"}}</h4>
         </div>
       </div>
     </div>
