Alteração na ficha de personagem e de npc, para adicionar Itens, magias e efeitos .

--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -92,7 +92,7 @@
           </div>
           <div>
             <strong>
-              {{localize "TRESDETALPHA.Forca.ataque.label"}} ({{localize "TRESDETALPHA.Forca.ataque.abreviacao"}})&nbsp;
+              {{localize "TRESDETALPHA.Forca.ataque.label"}} ({{localize "TRESDETALPHA.Forca.ataque.abreviacao"}})&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </strong>
             <label for="system.attributes.forcaDeAtaque.forca.value" class="resource-label rollable align-left">
               {{localize "TRESDETALPHA.Caracteristicas.forca.abreviacao"}}:&nbsp;
@@ -140,7 +140,7 @@
 
   {{!-- Owned Spells Tab --}}
   <div class="tab spells" data-group="primary" data-tab="spells">
-    {{> "systems/tresdetalpha/templates/actor/parts/actor-spells.html"}}
+    {{> "systems/tresdetalpha/templates/actor/parts/actor-magias.html"}}
   </div>
 
   {{!-- Active Effects Tab --}}
