--- a/templates/actor/parts/actor-vantagemunica.html
+++ b/templates/actor/parts/actor-vantagemunica.html
@@ -2,7 +2,7 @@
   <li class="item flexrow items-header">
     <div class="item-name">{{localize "TYPES.Item.vantagemUnica"}}</div>
     <div class="item-controls">
-      <a class="item-control item-create" title="Create item" data-type="vantagemUnica"><i class="fas fa-plus"></i> {{localize "TRESDETALPHA.Add"}}</a>
+      <a class="item-control item-create" title="{{localize "TRESDETALPHA.Criar"}}" data-type="vantagemUnica"><i class="fas fa-plus"></i> {{localize "TRESDETALPHA.Add"}}</a>
     </div>
   </li>
   {{#each vantagemUnica as |item id|}}
