--- a/templates/actor/parts/actor-features.html
+++ b/templates/actor/parts/actor-features.html
@@ -2,7 +2,7 @@
   <li class="item flexrow items-header">
     <div class="item-name">Exemplo Feature</div>
     <div class="item-controls">
-      <a class="item-control item-create" title="Create item" data-type="feature"><i class="fas fa-plus"></i> {{localize "TRESDETALPHA.Add"}}</a>
+      <a class="item-control item-create" title="{{localize "TRESDETALPHA.Criar"}}" data-type="feature"><i class="fas fa-plus"></i> {{localize "TRESDETALPHA.Add"}}</a>
     </div>
   </li>
   {{#each features as |item id|}}
