--- a/templates/actor/parts/actor-items.html
+++ b/templates/actor/parts/actor-items.html
@@ -1,12 +1,11 @@
 <ol class="items-list">
   <li class="item flexrow items-header">
-    <div class="item-name">Name</div>
-    <div class="item-formula">Roll Formula</div>
+    <div class="item-name">{{localize "TRESDETALPHA.Nome"}}</div>
     <div class="item-controls">
-      <a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add item</a>
+      <a class="item-control item-create" title="{{localize "TRESDETALPHA.Criar"}}" data-type="item"><i class="fas fa-plus"></i>{{localize "TRESDETALPHA.Add"}}</a>
     </div>
   </li>
-  {{#each gear as |item id|}}
+  {{#each objetosMagicos as |item id|}}
     <li class="item flexrow" data-item-id="{{item._id}}">
       <div class="item-name">
         <div class="item-image">
