--- a/templates/actor/parts/actor-magias.html
+++ b/templates/actor/parts/actor-magias.html
@@ -1,11 +1,11 @@
 <ol class="items-list">
   <li class="item flexrow items-header">
-    <div class="item-name">{{localize "TYPES.Item.vantagens"}}</div>
+    <div class="item-name">{{localize "TRESDETALPHA.Nome"}}</div>
     <div class="item-controls">
-      <a class="item-control item-create" title="{{localize "TRESDETALPHA.Criar"}}" data-type="vantagem"><i class="fas fa-plus"></i> {{localize "TRESDETALPHA.Add"}}</a>
+      <a class="item-control item-create" title="{{localize "TRESDETALPHA.Criar"}}" data-type="item"><i class="fas fa-plus"></i>{{localize "TRESDETALPHA.Add"}}</a>
     </div>
   </li>
-  {{#each vantagems as |item id|}}
+  {{#each magias as |item id|}}
     <li class="item flexrow" data-item-id="{{item._id}}">
       <div class="item-name">
         <div class="item-image">
@@ -13,6 +13,7 @@
         </div>
         <h4>{{item.name}}</h4>
       </div>
+      <div class="item-formula item-prop">{{item.system.formula}}</div>
       <div class="item-controls">
         <a class="item-control item-edit" title="{{localize "TRESDETALPHA.Editar"}}"><i class="fas fa-edit"></i></a>
         <a class="item-control item-delete" title="{{localize "TRESDETALPHA.Deletar"}}"><i class="fas fa-trash"></i></a>
