--- a/templates/actor/parts/actor-pericias.html
+++ b/templates/actor/parts/actor-pericias.html
@@ -2,7 +2,7 @@
   <li class="item flexrow items-header">
     <div class="item-name">{{localize "TYPES.Item.pericias"}}</div>
     <div class="item-controls">
-      <a class="item-control item-create" title="Create item" data-type="pericia"><i class="fas fa-plus"></i> {{localize "TRESDETALPHA.Add"}}</a>
+      <a class="item-control item-create" title="{{localize "TRESDETALPHA.Criar"}}" data-type="pericia"><i class="fas fa-plus"></i> {{localize "TRESDETALPHA.Add"}}</a>
     </div>
   </li>
   {{#each pericias as |item id|}}
