Alteração no layout da tela de personagem, deixando os campos de input de nome, vida, mana e xp mais estilosos. Início de automatização e cálculos padrões do sistema.

--- a/styles/tresdetalpha.css
+++ b/styles/tresdetalpha.css
@@ -10,6 +10,12 @@
   cursor: pointer;
 }
 
+.input-sem-borda[type="text"],
+.input-sem-borda[type="number"] {
+  background: none;
+  border: 1px solid transparent;
+}
+
 .grid,
 .grid-2col {
   display: grid;
@@ -233,6 +239,7 @@
 .tresdetalpha .item-form {
   font-family: "Roboto", sans-serif;
 }
+
 .tresdetalpha .sheet-header {
   -webkit-box-flex: 0;
   -ms-flex: 0 auto;
