--- a/templates/actor/actor-personagem-sheet.html
+++ b/templates/actor/actor-personagem-sheet.html
@@ -13,32 +13,7 @@
         {{!-- "flex-group-center" is also defined in the _grid.scss file
         and it will add a small amount of padding, a border, and will
         center all of its child elements content and text. --}}
-        <div class="resource flex-group-center">
-          <label for="system.vida.value" class="resource-label">{{localize "TRESDETALPHA.Pontos.vida.label"}}</label>
-          <div class="resource-content flexrow flex-center flex-between">
-            <input class="input-sem-borda" type="text" name="system.vida.value" value="{{system.vida.value}}" max="{{system.vida.max}}" data-dtype="Number" />
-            <span> / </span>
-            <input class="input-sem-borda" type="text" name="system.vida.max" value="{{system.vida.max}}" data-dtype="Number" disabled="disabled"/>
-          </div>
-        </div>
-
-        <div class="resource flex-group-center">
-          <label for="system.magia.value" class="resource-label">{{localize "TRESDETALPHA.Pontos.magia.label"}}</label>
-          <div class="resource-content flexrow flex-center flex-between">
-            <input class="input-sem-borda" type="text" name="system.magia.value" value="{{system.magia.value}}" max="{{system.magia.max}}" data-dtype="Number" />
-            <span> / </span>
-            <input class="input-sem-borda" type="text" name="system.magia.max" value="{{system.magia.max}}" data-dtype="Number" disabled="disabled"/>
-          </div>
-        </div>
-
-        <div class="resource flex-group-center">
-          <label for="system.attributes.level.value" class="resource-label">{{localize
-            "TRESDETALPHA.Pontos.experiencia.label"}}</label>
-          <div class="resource-content flexrow flex-center flex-between">
-            <input class="input-sem-borda" type="text" name="system.experiencia.value" value="{{system.experiencia.value}}"
-              data-dtype="Number" />
-          </div>
-        </div>
+        
       </div>
     </div>
   </header>
@@ -64,17 +39,52 @@
           {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
           use both the "grid" and "grid-Ncol" class where "N" can be any number
           from 1 to 12 and will create that number of columns. --}}
-          <div class="abilities flexcol">
+          <div class="abilities flexcol" style="border: 1px solid; border-radius: 3px;">
+            <div class="row">&nbsp;</div>
             {{#each system.abilities as |ability key|}}
             <div class="ability flexrow flex-group-center">
               <label for="system.abilities.{{key}}.value" class="resource-label rollable flexlarge align-left"
-                data-roll="d6+@abilities.{{key}}.value" data-label="{{ability.label}}">{{ability.label}}</label>
-              <input type="text" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number" />
+                data-roll="d6+@abilities.{{key}}.value" data-label="{{ability.label}}">&nbsp;&nbsp;{{ability.label}} :</label>
+              <input type="text" class="input-sem-borda" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number" />
+              <span>&nbsp;&nbsp;</span>
             </div>
             {{/each}}
+            <div class="row">&nbsp;</div>
           </div>
+
+          <!-- AQUI !!!!!-->
+          <div class="row">&nbsp;</div>
+          <div class="container flexcol" style="border: 1px solid; border-radius: 3px;">
+            <div class="row">&nbsp;</div>
+          <div class="row">
+            <label for="TRESDETALPHA.Pontos.vida.label" class="resource-label align-left">
+              &nbsp;&nbsp;{{localize "TRESDETALPHA.Pontos.vida.label"}} :
+            </label>
+            <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <input class="input-sem-borda-menor" type="text" name="system.vida.value" value="{{system.vida.value}}" max="{{system.vida.max}}" placeholder="0" data-dtype="Number" />
+            <span> / </span>
+            <input class="input-sem-borda-menor" type="text" name="system.vida.max" value="{{system.vida.max}}" data-dtype="Number" placeholder="0" disabled="disabled"/>
+          </div>
+          <div class="row">
+            <label for="system.magia.value" class="resource-label">
+              &nbsp;&nbsp;{{localize "TRESDETALPHA.Pontos.magia.label"}} :
+            </label>
+            <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <input class="input-sem-borda-menor" type="text" name="system.magia.value" value="{{system.magia.value}}" max="{{system.magia.max}}" placeholder="0" data-dtype="Number" />
+            <span> / </span>
+            <input class="input-sem-borda-menor" type="text" name="system.magia.max" value="{{system.magia.max}}" placeholder="0" data-dtype="Number" disabled="disabled"/>
+          </div>
+          <div class="row">
+            <label for="system.attributes.level.value" class="resource-label">
+              &nbsp;&nbsp;{{localize "TRESDETALPHA.Pontos.experiencia.label"}} :</label>
+              <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+              <input class="input-sem-borda-menor" type="text" name="system.experiencia.value" value="{{system.experiencia.value}}" placeholder="0" data-dtype="Number" />
+          </div>
+          <div class="row">&nbsp;</div>
+        </div>
+
         </aside>
-        <div class="abilities flexcol">
+        <div>
           <strong class="resource-label align-center">
             {{localize "TRESDETALPHA.Tipo.dano.label"}}
           </strong>
